--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 
   <!-- Connection Code-->
   <script type="text/javascript" src="js/notify.js"></script>
+  <script type="text/javascript" src="js/read_vars.js"></script>
   <script type="text/javascript" src="js/connection.js"></script>
   <script type="text/javascript" src="js/ui_support_functions.js"></script>
   <script type="text/javascript" src="js/utils.js"></script>
